Changed name spelling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Primary Meta Tags -->
-    <title>SASAN SOROOSH - Portfolio</title>
-    <meta name="title" content="SASAN SOROOSH - Portfolio" />
+    <title>SASAN SOROUSH - Portfolio</title>
+    <meta name="title" content="SASAN SOROUSH - Portfolio" />
     <meta
       name="description"
       content="I’m an iOS Engineer & UI/UX Nerd"
@@ -24,27 +24,27 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sasansoroosh.com/" />
-    <meta property="og:title" content="SASAN SOROOSH - Portfolio" />
+    <meta property="og:url" content="https://sasansoroush.com/" />
+    <meta property="og:title" content="SASAN SOROUSH - Portfolio" />
     <meta
       property="og:description"
       content="I’m an iOS Engineer & UI/UX Nerd"
     />
     <meta property="og:image" content="Images/Header.png" />
-    <meta property="og:site_name" content="SASAN SOROOSH" />
-    <meta property="og:url" content="https://sasansoroosh.com" />
+    <meta property="og:site_name" content="SASAN SOROUSH" />
+    <meta property="og:url" content="https://sasansoroush.com" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://sasansoroosh.com/" />
-    <meta property="twitter:title" content="SASAN SOROOSH - Portfolio" />
+    <meta property="twitter:url" content="https://sasansoroush.com/" />
+    <meta property="twitter:title" content="SASAN SOROUSH - Portfolio" />
     <meta
       property="twitter:description"
       content="I’m an iOS Engineer & UI/UX Nerd"
     />
     <meta property="twitter:image" content="Images/Header.png" />
 
-    <title>SASAN SOROOSH - Portfolio</title>
+    <title>SASAN SOROUSH - Portfolio</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -55,13 +55,13 @@
       <div class="hero-content container d-flex align-items-center" id="hero">
         <div class="white-bg" >
           <h1 class="hero-title title-labels" >
-            SASAN SOROOSH
+            SASAN SOROUSH
           </h1>
           <p class="hero-slogan display-4 title-labels" >
             iOS Engineer.
           </p>
         </div>
-        <div class="hero-background" title="SASAN SOROOSH"></div>
+        <div class="hero-background" title="SASAN SOROUSH"></div>
         <div class="hero-overlay"></div>
       </div>
     </div>
@@ -84,7 +84,7 @@
               <br />
               <div >
                 <p class="bio">
-                  Hi, my name is Sasan Soroosh. A self-taught
+                  Hi, my name is Sasan SOROUSH. A self-taught
                   <strong>iOS Engineer & UI/UX Nerd</strong>, I started programming about six
                   years ago & I love to learn more about what I do everyday, not just because it makes me a better enginner but also because it is so much fun.
                 </p>
@@ -527,7 +527,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 footer-content">&copy; 2021 SASAN SOROOSH</div>
+          <div class="col-sm-12 footer-content">&copy; 2021 SASAN SOROUSH</div>
         </div>
       </div>
     </footer>
