Made some changes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <br />
               <div >
                 <p class="bio">
-                  Hi, my name is Sasan SOROUSH. A self-taught
+                  Hi, my name is Sasan Soroush. A self-taught
                   <strong>iOS Developer & UI/UX Enthusiast</strong>, I started programming about six
                   years ago & I love to learn more about what I do everyday, not just because it makes me a better developer but also because it is so much fun.
                 </p>
