Made some changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Primary Meta Tags -->
-    <title>SASAN SOROUSH - Portfolio</title>
+    <title>SASAN SOROUSH - Senior iOS Developer</title>
     <meta name="title" content="SASAN SOROUSH - Portfolio" />
     <meta
       name="description"
@@ -44,7 +44,7 @@
     />
     <meta property="twitter:image" content="Images/Header.png" />
 
-    <title>SASAN SOROUSH - Portfolio</title>
+    <title>SASAN SOROUSH - Senior iOS Developer</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -58,7 +58,7 @@
             SASAN SOROUSH
           </h1>
           <p class="hero-slogan display-4 title-labels" >
-            iOS Developer.
+            Senior iOS Developer.
           </p>
         </div>
         <div class="hero-background" title="SASAN SOROUSH"></div>
@@ -84,32 +84,27 @@
               <br />
               <div >
                 <p class="bio">
-                  Hi, my name is Sasan Soroush. A self-taught
-                  <strong>iOS Developer & UI/UX Enthusiast</strong>, I started programming about six
-                  years ago & I love to learn more about what I do everyday, not just because it makes me a better developer but also because it is so much fun.
+                  Hi 👋🏻, I'm Sasan Soroush, a <strong> iOS Developer and UI/UX Enthusiast</strong> with over six years
+                   of experience. I find it exhilarating to take on challenging projects and deliver high-quality
+                    work. I am a hardworking professional who excels in fast-paced environments and has a proven 
+                    track record of successfully managing multiple projects at once. Learning new things every day
+                     and applying them to my work is something that I enjoy and find rewarding.
                 </p>
                 
                 <p class="bio">
-                I also work on OSX, watchOS & tvOS Projects.
+                I also have expeirence developing OSX, watchOS & tvOS Applications.
                 </p>
 
                 <p class="bio">
                   I am a <strong>passionate learner</strong>, It is my favorite
                   way of having fun. In my free time, I am learning about
-                  <strong>AI, Dapps</strong> & my beloved field of
-                  <strong>making mobile games</strong> with unity. 
+                  AI, Dapps & my beloved field of
+                  making mobile games with unity. 
                 </p>
 
                 <p class="bio">
                   When I'm not working I often love to play guitar, play video
                   games and travel.
-                </p>
-
-                <p class="bio">
-                  <strong
-                    >I talked a little more technical at bottom of this
-                    page</strong
-                  >.
                 </p>
               </div>
 
@@ -128,8 +123,9 @@
                   <p>
                     As an iOS Developer at SoundStorming, I led the development of the iOS app 
                     and oversaw other technical aspects such as website development and database management. 
-                    Efficient time management was essential to balancing responsibilities with other commitments,
-                     and this experience helped me become a more organized and disciplined professional.
+                    Since the role was part-time, I honed my time management skills to juggle diverse 
+                    responsibilities alongside other commitments. This experience elevated my organizational
+                     and discipline skills, making me a more efficient and effective professional.
                   </p>
                   <p>
                     Create music together. Record and share your sounds and find
