Made some changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             SASAN SOROUSH
           </h1>
           <p class="hero-slogan display-4 title-labels" >
-            Senior iOS Developer.
+            Senior iOS Developer
           </p>
         </div>
         <div class="hero-background" title="SASAN SOROUSH"></div>
