--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <br />
               <div >
                 <p class="bio">
-                  Hi 👋🏻, I'm Sasan Soroush, a <strong> iOS Developer and UI/UX Enthusiast</strong> with over six years
+                  Hi 👋🏻, I'm Sasan Soroush, an <strong> iOS Developer and UI/UX Enthusiast</strong> with over six years
                    of experience. I find it exhilarating to take on challenging projects and deliver high-quality
                     work. I am a hardworking professional who excels in fast-paced environments and has a proven 
                     track record of successfully managing multiple projects at once. Learning new things every day
