Made some changes

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12 main">
-              <h2 >Welcome to my Portfolio Website</h2>
+              <h2 >Welcome 😊</h2>
               <br />
               <p align="center">
                 <img
-                  
+                  class="profile"
                   width="250"
                   height="250"
                   src="Images/Profile.JPG"
