Made some changes

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <br />
                 <div >
                   <p>
-                    A PLATFORM FOR EXCLUSIVE ARTIST-FAN ENGAGEMENT DURING THE
-                    CREATIVE PROCESS
+                    <strong>A PLATFORM FOR EXCLUSIVE ARTIST-FAN ENGAGEMENT DURING THE
+                    CREATIVE PROCESS</strong>
                   </p>
                   <p>
                     As an iOS Developer at SoundStorming, I led the development of the iOS app 
@@ -126,13 +126,6 @@
                     Since the role was part-time, I honed my time management skills to juggle diverse 
                     responsibilities alongside other commitments. This experience elevated my organizational
                      and discipline skills, making me a more efficient and effective professional.
-                  </p>
-                  <p>
-                    Create music together. Record and share your sounds and find
-                    musicians to help finish your track. Fast and easy way to
-                    discover ideas and make new music. Get your fans to
-                    participate in the music-making process. Download now to
-                    start your musical journey!
                   </p>
 
                   <p>
@@ -143,14 +136,15 @@
 
 
                   <p>
-                    Check out the
+                    Being part of this 
                     <a
                       target="_blank"
                       rel="noopener noreferrer"
                       href="https://soundstorming.com/#team-section"
-                      ><strong>Team section</strong></a
+                      >team</a
                     >
-                    at SoundStorming Website, you'll find me there.
+                    was an outstanding experience for me since I got the opportunity
+                     to work with some of the most amazing individuals in the industry.
                   </p>
                   
                   <ul >
@@ -162,20 +156,12 @@
                         >SoundStorming Website</a
                       >
                     </li>
-                  </ul>
-                  <br />
-
-
-
-                  <p>Check it out on app store</p>
-
-                  <ul >
                     <li>
                       <a
                         target="_blank"
                         rel="noopener noreferrer"
                         href="https://apps.apple.com/us/app/soundstorming/id1429535548"
-                        >SoundStorming App</a
+                        >SoundStorming on  App Store </a
                       >
                     </li>
                   </ul>
@@ -229,7 +215,7 @@
                       target="_blank"
                       rel="noopener noreferrer"
                       href="https://apps.apple.com/lt/app/tipsy/id1452117799"
-                      >Tipsy™</a
+                      >Tipsy™ on  App Store</a
                     >
                   </li>
                 </ul>
