Made some changes

--- a/index.html
+++ b/index.html
@@ -277,16 +277,18 @@
                 </p>
 
                 <p><br /></p>
+                <p><br /></p>
               </section>
 
-              <section>
+              <section class="passion-projects">
                 <p><br /></p>
                 <h2 >Passion Projects 👨🏻‍💻 ☕️ ✨</h2>
                 <p><br /></p>
-                <p><br /></p>
               </section>
 
               <section>
+                <br />
+                <br />
                 <h1 >iMoozik</h1>
                 <br />
                 <div >
