--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
                 </p>
                 <br>
                 <div >
-                  <p>
-                    <strong>A PLATFORM FOR EXCLUSIVE ARTIST-FAN ENGAGEMENT DURING THE
-                    CREATIVE PROCESS</strong>
-                  </p>
+                  <!-- <p>
+                    <strong>A platform for exclusive artist-fan engagement during the creative process.</strong>
+                  </p> -->
                   <p>
                     As an iOS Developer at SoundStorming, I led the development of the iOS app 
                     and oversaw other technical aspects such as website development and database management. 
@@ -146,12 +145,11 @@
 
                   <p>
                     Being part of this 
-                    <a
+                    <a class="SSTeam"
                       target="_blank"
                       rel="noopener noreferrer"
                       href="https://soundstorming.com/#team-section"
-                      >team</a
-                    >
+                      >team</a>
                     was an outstanding experience for me since I got the opportunity
                      to work with some of the most amazing individuals in the industry.
                   </p>
@@ -188,6 +186,11 @@
                 </p>
                 <br />
                 <div >
+                  <!-- <p>
+                    <strong>
+                      Tipsy ™ is a platform that handles Micro-Payments by credit cards.
+                    </strong>
+                  </p> -->
                   <p>
                     As the lead iOS Developer for Tipsy™, a startup Shabakeh Gostaran Sabz Persia Co. 
                     was working on, I spearheaded the development of its iOS app. I led the technical side 
