--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
 
               <section class="passion-projects">
                 <p><br /></p>
-                <h2 >Passion Projects 👨🏻‍💻 ☕️ ✨</h2>
+                <h2 >Passion Projects</h2>
+                <h2 >👨🏻‍💻 ☕️ 📱</h2>
                 <p><br /></p>
               </section>
 
