--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
               <section class="passion-projects">
                 <p><br /></p>
-                <h2 >Passion Project</h2>
+                <h2 >Passion Projects</h2>
                 <h2 >👨🏻‍💻 ☕️ 📱</h2>
                 <p><br /></p>
               </section>
