Refactor index.html to enhance clarity and streamline content. Removed redundant links and improved phrasing in the team experience section.

--- a/index.html
+++ b/index.html
@@ -134,28 +134,13 @@
                   </p>
 
                   <p>
-                    Being part of this
-                    <a
-                      class="SSTeam"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      href="https://soundstorming.com/#team-section"
-                      >team</a
-                    >
+                    Being part of this team
                     was an outstanding experience for me since I got the
                     opportunity to work with some of the most amazing
                     individuals in the industry.
                   </p>
 
                   <ul>
-                    <li>
-                      <a
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        href="https://soundstorming.com/"
-                        >SoundStorming Website</a
-                      >
-                    </li>
                     <li>
                       <a
                         target="_blank"
