Add DermEngine and MoleScope sections to index.html with descriptions and images

--- a/index.html
+++ b/index.html
@@ -107,6 +107,43 @@
 
               <!-- list my favourite technologies here -->
               <section>
+                <h1>DermEngine</h1>
+                <br />
+                <p align="center">
+                  <img width="750" src="Images/dermengine.png" />
+                </p>
+                <br />
+                <div>
+                  <p>
+                    <strong>DermEngine by MetaOptima</strong> is an intelligent dermatology software solution
+                    designed for the imaging, documentation, and analysis of
+                    skin conditions. The app leverages cutting-edge AI to assist
+                    healthcare professionals in delivering efficient and
+                    accurate patient care.
+                  </p>
+                </div>
+                <p><br /></p>
+              </section>
+
+              <section>
+                <h1>Molescope</h1>
+                <br />
+                <p align="center">
+                  <img width="750" src="Images/molescope.png" />
+                </p>
+                <br />
+                <div>
+                  <p>
+                    <strong>MoleScope by MetaOptima</strong> is designed to bring you peace of mind by 
+                    helping you track and monitor your moles and spots over time, 
+                    MoleScope allows you to manage your skin check and connect with
+                     a specialist* from the comfort of your own home.
+                  </p>
+                </div>
+                <p><br /></p>
+              </section>
+
+              <section>
                 <h1>SoundStorming</h1>
                 <br />
                 <p align="center">
