Add links to DermEngine and MoleScope apps in index.html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
                     healthcare professionals in delivering efficient and
                     accurate patient care.
                   </p>
+                  <ul>
+                    <li>
+                      <a
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        href="https://apps.apple.com/us/app/dermengine/id998126403"
+                        >DermEngine on  App Store
+                      </a>
+                    </li>
+                  </ul>
                 </div>
                 <p><br /></p>
               </section>
@@ -139,6 +149,16 @@
                     MoleScope allows you to manage your skin check and connect with
                      a specialist* from the comfort of your own home.
                   </p>
+                  <ul>
+                    <li>
+                      <a
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        href="https://apps.apple.com/us/app/molescope/id1003576096"
+                        >MoleScope on  App Store
+                      </a>
+                    </li>
+                  </ul>
                 </div>
                 <p><br /></p>
               </section>
