Add OptimaScan video showcase to index.html with project description and new video file

--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
               <br />
               <br />
 
+              <!-- Video showcase for OptimaScan -->
+              <section>
+                <h1>OptimaScan</h1>
+                <br />
+                <p align="center">
+                  <video width="750" autoplay muted loop playsinline>
+                    <source src="videos/OptimaScan Device Rotation Slow.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                  </video>
+                </p>
+                <br />
+                <div>
+                  <p>
+                    <strong>OptimaScan by MetaOptima</strong> is the most exciting project I have ever worked on. It brings together
+                    hardware communications, macOS development, and iOS development to create a
+                    sophisticated mechanism poised to revolutionize dermatology, which I am
+                    truly proud of.
+                  </p>
+                  <p>
+                    Throughout its development, I leveraged a wide array of cutting-edge technologies from
+                    low-level hardware interfaces (BLE, Wi-Fi, and custom firmware protocols) to modern
+                    Swift/macOS frameworks (SwiftUI, Combine, Core Bluetooth, P2P communication, Metal, and more) to deliver a
+                    seamless, high-performance experience across the entire hardware–software stack.
+                    I also developed a custom firmware for the hardware device, which allows for the seamless integration of the hardware with the software.
+                  </p>
+                </div>
+                <br />
+              </section>
+              <!-- End video showcase -->
+
               <!-- list my favourite technologies here -->
               <section>
                 <h1>DermEngine</h1>
