--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h1>OptimaScan</h1>
                 <br />
                 <p align="center">
-                  <video width="750" autoplay muted loop playsinline>
+                  <video width="750" autoplay muted loop playsinline style="border-radius: 12px;">
                     <source src="videos/OptimaScan Device Rotation Slow.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                   </video>
