--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h1>OptimaScan</h1>
                 <br />
                 <p align="center">
-                  <video width="750" autoplay muted loop playsinline style="border-radius: 12px;">
+                  <video autoplay muted loop playsinline style="width: 100%; max-width: 750px; border-radius: 12px;">
                     <source src="videos/OptimaScan Device Rotation Slow.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                   </video>
@@ -584,7 +584,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 footer-content">&copy; 2023 SASAN SOROUSH</div>
+          <div class="col-sm-12 footer-content">&copy; 2025 SASAN SOROUSH</div>
         </div>
       </div>
     </footer>
