--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <br />
                 <div>
                   <p>
-                    <strong>OptimaScan by MetaOptima</strong> is the most exciting project I have ever worked on. It brings together
+                    <strong>OptimaScan by MetaOptima Technology Inc.</strong> is the most exciting project I have ever worked on. It brings together
                     hardware communications, macOS development, and iOS development to create a
                     sophisticated mechanism poised to revolutionize dermatology, which I am
                     truly proud of.
@@ -160,7 +160,7 @@
                 <br />
                 <div>
                   <p>
-                    <strong>DermEngine by MetaOptima</strong> is an intelligent dermatology software solution
+                    <strong>DermEngine by MetaOptima Technology Inc.</strong> is an intelligent dermatology software solution
                     designed for the imaging, documentation, and analysis of
                     skin conditions. The app leverages cutting-edge AI to assist
                     healthcare professionals in delivering efficient and
@@ -189,7 +189,7 @@
                 <br />
                 <div>
                   <p>
-                    <strong>MoleScope by MetaOptima</strong> is designed to bring you peace of mind by 
+                    <strong>MoleScope by MetaOptima Technology Inc.</strong> is designed to bring you peace of mind by 
                     helping you track and monitor your moles and spots over time, 
                     MoleScope allows you to manage your skin check and connect with
                      a specialist* from the comfort of your own home.
