--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                       <div class="spinner"></div>
                     </div>
                     <video class="showcase-video" autoplay muted loop playsinline>
-                      <source src="videos/optimascan_video.mp4" type="video/mp4" />
+                      <source src="videos/optimascan_vid.mp4" type="video/mp4" />
                       Your browser does not support the video tag.
                     </video>
                   </div>
