Update bio in index.html to reflect nine years of experience as a Senior iOS Developer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div>
                 <p class="bio">
                   Hi 👋🏻, I'm Sasan Soroush, a
-                  <strong> Senior iOS Developer</strong> with over eight years
+                  <strong> Senior iOS Developer</strong> with over nine years
                   of experience in healthcare, travel, and fintech, building
                   scalable, high-performance iOS and Mac OS applications. I am a
                   dedicated professional with a strong ability to thrive in
